Fixed spacing issues

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -7,9 +7,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-top: 0px;
-    margin-bottom: -20px;
-    margin-bottom: none;
+    margin-bottom: 0px;
 }
 .column {
     height: 100%;
@@ -26,7 +24,13 @@
     width: 100vw;
     display: grid;
     grid-template-columns: 250px auto;
-    justify-content: space-between;
+
+}
+
+.grid-container {
+    height: fit-content;
+    width: 100%;
+    align-self: center;
 }
 
 .grid {
